--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,10 +2,10 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Inconsolata", monospace;
+  font-family: "Iosevka", sans-serif;
 
-  line-height: 1.5;
-  font-size: 17px;
+  line-height: 1.7;
+  font-size: 16px;
 }
 
 pre {
